week3/Kubernetes-Resources/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-nginx-access
  namespace: test-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  egress:
    - ports:
        - protocol: TCP
          port: 80
      to:
        - podSelector:
            matchLabels:
              app: nginx-np
          namespaceSelector:
            matchLabels:
              name: test-np
  policyTypes:
    - Egress
